front-common-fix: dark mode blue color

--- a/Frontend/assets/css/common.css
+++ b/Frontend/assets/css/common.css
@@ -4,7 +4,7 @@
 :root {
     --beige: #FFF1DC;
     --brown: #BDA692;
-    --light-blue: #60d3fd;
+    --light-blue: #b5c3ff;
     --blue: #3A98B9;
     --light-gray: #f8f8f8;
     --gray: #eeeeee;
